// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportDialog renders with CodePen export form 1`] = `
<form
  action="https://codepen.io/pen/define"
  method="POST"
  rel="noopener"
  style={
    Object {
      "visibility": "hidden",
    }
  }
  target="_blank"
>
  <input
    name="data"
    type="hidden"
    value="{\\"title\\":\\"THE REPORT FILE NAME\\",\\"description\\":\\"description\\",\\"html\\":\\"fake html\\",\\"editors\\":\\"100\\"}"
  />
  <button
    type="submit"
  />
</form>
`;

exports[`ExportDialog renders with export dropdown 1`] = `
"<StyledWithResponsiveMode hidden={false} onDismiss={[Function: onDismiss]} dialogContentProps={{...}} modalProps={{...}}>
  <StyledTextFieldBase multiline={true} autoFocus={true} rows={8} resizable={false} onChange={[Function: onDescriptionChange]} value=\\"description\\" ariaLabel=\\"Provide result description\\" />
  <StyledDialogFooterBase>
    <ExportDropdown fileName=\\"THE REPORT FILE NAME\\" fileURLProvider={[Function: function () {
                        var args = [];
                        for (var _i = 0; _i < arguments.length; _i++) {
                            args[_i] = arguments[_i];
                        }
                        _this._interceptor.removeInvocation(invocation_1);
                        var method = new MethodInfo(target, p);
                        var methodInvocation = new MethodInvocation(target, method, args, ProxyType.DYNAMIC);
                        _this._interceptor.intercept(methodInvocation);
                        return methodInvocation.returnValue;
                    }] { provideURL: [Function (anonymous)], [Symbol(Symbol.toStringTag)]: [Function: bound toString] }} featureFlagStoreData={{...}} html=\\"fake html\\" onExportLinkClick={[Function: onExportLinkClick]} reportExportServiceProvider={[Function: function () {
                        var args = [];
                        for (var _i = 0; _i < arguments.length; _i++) {
                            args[_i] = arguments[_i];
                        }
                        _this._interceptor.removeInvocation(invocation_1);
                        var method = new MethodInfo(target, p);
                        var methodInvocation = new MethodInvocation(target, method, args, ProxyType.DYNAMIC);
                        _this._interceptor.intercept(methodInvocation);
                        return methodInvocation.returnValue;
                    }] { forKey: [Function (anonymous)], [Symbol(Symbol.toStringTag)]: [Function: bound toString] }} />
    <CodePenExportForm fileName=\\"THE REPORT FILE NAME\\" description=\\"description\\" html=\\"fake html\\" onSubmit={[Function: onSubmit]} />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>"
`;

exports[`ExportDialog renders with open false 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "subText": "Optional: please describe the result (it will be saved in the report).",
      "title": "Provide result description",
      "type": 0,
    }
  }
  hidden={true}
  modalProps={
    Object {
      "containerClassName": "exportDialog",
      "isBlocking": false,
      "onDismissed": [Function],
    }
  }
  onDismiss={[Function]}
>
  <StyledTextFieldBase
    ariaLabel="Provide result description"
    autoFocus={true}
    multiline={true}
    onChange={[Function]}
    resizable={false}
    rows={8}
    value="description"
  />
  <StyledDialogFooterBase>
    <CustomizedPrimaryButton
      download="THE REPORT FILE NAME"
      href="fake-url"
      onClick={[Function]}
    >
      Export
    </CustomizedPrimaryButton>
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`ExportDialog renders with open true 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "subText": "Optional: please describe the result (it will be saved in the report).",
      "title": "Provide result description",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "exportDialog",
      "isBlocking": false,
      "onDismissed": [Function],
    }
  }
  onDismiss={[Function]}
>
  <StyledTextFieldBase
    ariaLabel="Provide result description"
    autoFocus={true}
    multiline={true}
    onChange={[Function]}
    resizable={false}
    rows={8}
    value="description"
  />
  <StyledDialogFooterBase>
    <CustomizedPrimaryButton
      download="THE REPORT FILE NAME"
      href="fake-url"
      onClick={[Function]}
    >
      Export
    </CustomizedPrimaryButton>
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;
